@@ -1,3 +1,12 @@
+2007-07-12  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-desktop.c: (wp_load_stuffs), (desktop_init),
+	(desktop_shutdown):
+	* appearance-desktop.h:
+	* appearance-main.c: (main):
+	* appearance.h: add option to add wallpapers via the command line
+	(closes bug #456337)
+
 2007-07-08  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-style.c: (cursor_size_scale_value_changed_cb): plug yet
